added multiple pages and 2nd css file

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
   -ms-grid-columns: (1fr)[5];
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 60px 1fr 1fr 1fr 1fr 60px;
-  grid-gap: 5px;
+  grid-gap: 2px;
   grid-template-areas:
     "header header header header header"
     "item-one item-one item-two item-two item-four"
@@ -127,13 +127,13 @@ header {
 footer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: center;
   grid-area: footer;
 }
 
 .content {
   padding: 1rem;
-  max-width: 400px;
+  /* max-width: 400px; */
 }
 
 .footer-content {
@@ -156,10 +156,11 @@ footer {
 /* Menu Styles */
 
 .logo {
-
+  text-decoration: none;
+  color: #c4c4c4;
 }
 
-.logo span {
+.bold {
   font-weight: 700;
 }
 
@@ -168,8 +169,7 @@ nav {
   display: flex;
   justify-content: space-between;
   padding: 0;
-  margin-top: 1.5em;
-  margin-left: 1.5em;
+  margin: 1.5em 1em;
 }
 
 nav ul {
@@ -193,37 +193,44 @@ nav li {
 }
 
 .menu-content li:hover {
-  background-color: #c4c4c4;
-  padding-left: 1em;
-  border-radius: 4px;
+  /* background-color: #c4c4c4;
+  border-radius: 4px; */
 }
 
 .nav-item {
-  color: #373737;
+  color: #c4c4c4;
   text-decoration: none;
   font-size: 1rem;
-  margin-right: 1.5em;
+  margin: 0 0.5em;
+  transition: all ease-in-out 0.5s;
 }
 
-.social {
+.nav-social {
   color: #c4c4c4;
   text-decoration: none;
   font-size: 2rem;
   margin-right: 1.5rem;
+  transition: all ease-in-out 0.5s;
 }
 
 footer li {
   display: inline-block;
 }
 
-.nav-item.active {
-  color: #c4c4c4;
-}
-
-.nav-item.active:hover {
+.nav-item:hover,
+.nav-social:hover {
   color: #373737;
   transition: all ease-in-out 0.4s;
 }
+
+.nav-item.active {
+  color: #eee;
+}
+
+/* .nav-item.active:hover {
+  color: #c4c4c4;
+  transition: all ease-in-out 0.4s;
+} */
 
 .theme-black {
   background: #1c1e22;
@@ -266,33 +273,55 @@ footer li {
 
 @media screen and (max-width: 768px) {
   .l-grid--4x4 {
-    -ms-grid-columns: (1fr)[2];
-    grid-template-columns: repeat(2, 1fr);
-    -ms-grid-rows: auto repeat(7, 1fr) 60px;
-    grid-template-rows: auto repeat(7, 1fr) 60px;
+    -ms-grid-columns: (1fr)[3];
+    grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: auto repeat(3, 1fr) 60px;
+    grid-template-rows: auto repeat(3, 1fr) 60px;
     grid-template-areas:
-      "header header"
-      "item-one item-one"
-      "item-one item-one"
-      "item-two item-two"
-      "item-two item-two"
-      "item-four item-five"
-      "item-three item-three"
-      "item-three item-three"
-      "footer footer";
+      "header header header"
+      "item-one item-one item-four"
+      "item-five item-two item-two"
+      "item-three item-three item-three"
+      "footer footer footer";
+  }
+
+  .item-one {
+    border-left: 2px solid #000;
+    border-right: 0;
+  }
+
+  .item-two {
+    border-left: 0;
+    border-right: 2px solid #000;
+  }
+
+  .item-three {
+    border-left: 2px solid #000;
+    border-right: 2px solid #000;
+  }
+
+  .item-four {
+    border-right: 2px solid #000;
+  }
+
+  .item-five {
+    border-left: 2px solid #000;
   }
 
   /* Menu Styles Mobile */
 
   nav {
     display: block;
-    padding-right: 1em;
-    padding-bottom: 1em;
+    margin: 1.5em 0;
   }
 
   nav ul {
     display: flex;
     justify-content: space-between;
+  }
+
+  .logo {
+    margin-left: 1em;
   }
 
   .menu-content {
@@ -304,30 +333,43 @@ footer li {
   .menu-content.open {
     height: auto;
     padding-bottom: 0;
-    margin-top: 0;
+    margin-top: 1em;
+    margin-bottom: -1.5em;
   }
 
   .menu-content li {
     display: block;
+    background: #1c1e22;
     padding: 0.5em;
+    text-align: center;
+    border: 1px solid #373737;
   }
 
-  .nav-item.active:hover {
-    display: block;
+  .menu-content li:nth-child(1) {
+    border-bottom: 0;
+  }
+
+  .menu-content li:nth-child(2) {
+    border-bottom: 0;
+  }
+
+  .nav-item {
+    margin: 0;
   }
 
   .burger-container {
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     margin-top: -1em;
+    margin-right: 1em;
   }
 
   .burger-nav {
     cursor: pointer;
     display: block;
     position: relative;
-    top: 5px;
+    top: 8px;
   }
 
   .burger-nav span {
@@ -355,26 +397,11 @@ footer li {
     transform: rotate(45deg);
     top: -13px;
   }
-
-  .item-one {
-    border-left: 5px solid #000;
-    border-right: 5px solid #000;
-  }
-
-  .item-two {
-    border-left: 5px solid #000;
-    border-right: 5px solid #000;
-  }
-
-  .item-three {
-    border-left: 5px solid #000;
-    border-right: 5px solid #000;
-  }
 }
 
 /* Mobile Portrait */
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) and (orientation: portrait) {
   .l-grid--4x4 {
     -ms-grid-columns: (1fr)[1];
     grid-template-columns: repeat(1, 1fr);
@@ -392,4 +419,118 @@ footer li {
       "item-five"
       "footer";
   }
+
+  .item-one {
+    border-right: 2px solid #000;
+  }
+
+  .item-two {
+    border-left: 2px solid #000;
+  }
+
+  .item-four {
+    border-left: 2px solid #000;
+  }
+
+  .item-five {
+    border-right: 2px solid #000;
+  }
 }
+
+@media screen and (max-width: 400px) and (orientation: portrait) {
+  .logo {
+    font-size: 0.8rem;
+  }
+
+  .nav-item {
+    font-size: 0.8rem;
+  }
+
+  .burger-container {
+    width: 32px;
+    height: 32px;
+  }
+
+  .burger-nav {
+    top: 9px;
+  }
+
+  .burger-nav span {
+    height: 6px;
+    margin-bottom: 5px;
+  }
+
+  .burger-container.open span:nth-child(1) {
+    top: 11px;
+  }
+
+  .burger-container.open span:nth-child(3) {
+    top: -11px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .l-grid--4x4 {
+    -ms-grid-columns: (1fr)[1];
+    grid-template-columns: repeat(1, 1fr);
+    -ms-grid-rows: auto repeat(5, 1fr) 60px;
+    grid-template-rows: auto repeat(5, 1fr) 60px;
+    grid-template-areas:
+      "header"
+      "item-one"
+      "item-two"
+      "item-four"
+      "item-three"
+      "item-five"
+      "footer";
+  }
+
+  .logo {
+    line-height: 1.5em;/* mogelijke fallback voor -320px */
+    font-size: 0.7rem;
+  }
+
+  .nav-item {
+    font-size: 0.7rem;
+  }
+
+  .hyphen {
+    display: ;
+  }
+}
+
+/* Tablets Landscape */
+
+@media screen and (max-width: 768px) and (orientation: landscape) {
+  .logo {
+    font-size: 0.8rem;
+  }
+
+  .nav-item {
+    font-size: 0.8rem;
+  }
+
+  .burger-container {
+    width: 32px;
+    height: 32px;
+  }
+
+  .burger-nav {
+    top: 9px;
+  }
+
+  .burger-nav span {
+    height: 6px;
+    margin-bottom: 5px;
+  }
+
+  .burger-container.open span:nth-child(1) {
+    top: 11px;
+  }
+
+  .burger-container.open span:nth-child(3) {
+    top: -11px;
+  }
+}
+
+/* About Styles */
